<resources>
    <string name="app_name">2FAMILY</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_surname">Cognome</string>
    <string name="prompt_address">Indirizzo</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Ripeti Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">L\'username non è valido</string>
    <string name="invalid_password">Password deve essere di almeno 5 caratteri</string>
    <string name="login_failed">"Login fallito, Riprovare"</string>
    <string name="benvenuto">Benvenuto !</string>
    <string name="family">Family</string>
    <string name="without_account">Non hai ancora un account ? </string>
    <string name="usr_img">user_img</string>
    <string name="psw_img">password_img</string>
    <string name="btn_description">LOGIN</string>
    <string name="sign_up">REGISTRATI</string>
    <string name="aesthetic">image</string>
    <string name="logo">logo</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="crea_tuo_gruppo_famiglia">Crea tuo gruppo FAMIGLIA</string>
    <string name="logout_desc">Desideri cambiare account ?</string>
    <string name="logut">LOGOUT</string>
    <string name="component_number">numero componenti</string>
    <string name="family_code">codice</string>
    <string name="family_desc">LA TUA FAMIGLIA</string>
    <string name="HOME">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="name_surname">Nome Cognome</string>
    <string name="lista_della_spesa">Lista della Spesa</string>
    <string name="commissioni_familiari">Commissioni Familiari</string>
    <string name="appuntamenti_e_reminder">Appuntamenti e reminder</string>
    <string name="trova_i_membri_della_tua_famiglia">Trova i membri della tua famiglia</string>
    <string name="chat_di_famiglia">Chat di Famiglia</string>
    <string name="esci_dal_gruppo">Esci dal Gruppo</string>
    <string name="logout">Logout</string>
    <string name="email_profile">Email</string>
    <string name="psw_profile">*******</string>
    <string name="change_psw">MODIFICA PASSWORD</string>
    <string name="profile_address">indirizzo</string>
    <string name="add_event">Aggiungi evento</string>
    <string name="time">Orario</string>
    <string name="description">Evento</string>
    <string name="event_title">GESTISCI EVENTI</string>
    <string name="manage_event_title">EVENTI IN PROGRAMMA</string>
    <string name="selected_date">Data selezionata</string>
    <string name="family_chat_title">CHAT DI FAMIGLIA</string>
    <string name="grocery_list_title">LISTA DELLA SPESA</string>
    <string name="product_quantity">Quantità e Prodotto</string>
    <string name="family_code_">Codice famiglia : </string>
    <string name="forgot_password">Hai dimenticato la password?</string>
    <string name="join_family">Unisciti al tuo gruppo FAMIGLIA</string>
    <string name="family_code_label">CODICE FAMIGLIA</string>
    <string name="join_button">UNISCITI</string>
    <string name="components_label">n° COMPONENTI</string>
    <string name="create_button">CREA GRUPPO</string>
    <string name="to_do_title">COMMISSIONI FAMIGLIA</string>
    <string name="new_commission">Nuova Commissione</string>
    <string name="add_commission">Aggiungi</string>
    <string name="track_family_title">TROVA LA TUA FAMIGLIA</string>
    <string name="profile_familyComponents">Membri del Gruppo</string>
    <string name="available">Posti Disponibili</string>
    <string name="change_nComponents">MODIFICA CAPIENZA GRUPPO ( Beta )</string>
</resources>